--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "<!DOCTYPE html> \r <html> \r <head>\r     <meta name=\"viewport\" content=\"width=device-width\" /> \r \t<meta http-equiv=\"Content-Type\" content=\"text/html; charset=utf-8\" />\r \t<title>WordPress &#8250; À lire</title>\r \t<link rel=\"stylesheet\" href=\"wp-admin/css/install.css?ver=20100228\" type=\"text/css\" />\r </head>\r <body>\r <h1 id=\"logo\">\r \t<a href=\"https://wordpress.org/\"><img alt=\"WordPress\" src=\"wp-admin/images/wordpress-logo.png\" /></a> \r \t<br />Version 4.2.2",
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.1.3",
     "gulp": "^3.8.11",
     "gulp-bless": "^3.0.1",
     "gulp-compass": "^2.0.4",
